SBVTestSuite/TestSuite/CompileTests/SCase/SCase01.stderr
SCase01.hs:9:14: error: [GHC-39584]
    " SCase01.hs:9:13: Parse error: EOF

    " In the quasi-quotation: [sCase|Expr e of|]
  |
9 | t e = [sCase|Expr e of|]
  |              ^^^^^^^^^^^

